--- a/PrevisaoClimatica/src/app/components/home/home.html
+++ b/PrevisaoClimatica/src/app/components/home/home.html
@@ -29,7 +29,6 @@
   </div>
 </div>
 
-
 <div class="row" *ngIf="previsao">
   <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
     <div class="card text-center text-white bg-primary bg-gradient shadow-lg">
@@ -44,18 +43,18 @@
             <p class="h4 mt-2">{{ previsao.condicao }}</p>
           </div>
           <div class="col-12 col-md-6">
-            <h1 class="display-1 fw-bold">{{ previsao.temperatura }}°C</h1>
+            <h1 class="display-1 fw-bold">{{ previsao.temperatura | number:'1.0-0' }}°C</h1>
           </div>
         </div>
         
         <div class="row text-white fs-5 opacity-75">
           <div class="col-4">
             <p class="mb-0"><i class="bi bi-thermometer-low me-1"></i> Mínima</p>
-            <p class="fw-bold">{{ previsao.tempMin }}°C</p>
+            <p class="fw-bold">{{ previsao.tempMin | number:'1.0-0' }}°C</p>
           </div>
           <div class="col-4">
             <p class="mb-0"><i class="bi bi-thermometer-high me-1"></i> Máxima</p>
-            <p class="fw-bold">{{ previsao.tempMax }}°C</p>
+            <p class="fw-bold">{{ previsao.tempMax | number:'1.0-0' }}°C</p>
           </div>
           <div class="col-4">
             <p class="mb-0"><i class="bi bi-droplet-half me-1"></i> Umidade</p>
