FIX - ajustes no html para responsividade

--- a/PrevisaoClimatica/src/app/app.html
+++ b/PrevisaoClimatica/src/app/app.html
@@ -5,11 +5,16 @@
       <i class="bi bi-cloud-sun-fill me-2"></i> ☀️ Previsão Climática
     </a>
     
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#mainNavbarContent" 
+            aria-controls="mainNavbarContent" 
+            aria-expanded="false" 
+            aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="mainNavbarContent">
       
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <ng-container *ngIf="isLoggedIn$ | async">
